# rust-restructure

./: Cargo.toml  README.md  search-index.js
restructure/: index.html  macro.regexify!.html  sidebar-items.js  struct.Restruct.html  trait.RegexStruct.html
src/: lib.rs
src/restructure/: lib.rs.html
tests/: lib.rs
