[package]
name = "restructure"
version = "0.2.0"
authors = ["Faizaan <aulisius7@gmail.com>"]
repository = "https://github.com/rewrite-in-rust/restructure.git"
homepage = "https://github.com/rewrite-in-rust/restructure.git"
documentation = "https://docs.rs/restructure/"
readme = "README.md"
description = "Match regex expressions into struct fields"
keywords = ["regex", "struct", "restructure"]
license = "MIT"

[dependencies]
regex = "^0.2.1"
